# workshop_gradiant

./: pyproject.toml  requirements.txt
workshop_gradiant/: install_poetry.sh
workshop_gradiant/clasificador_ataques/: model.ipynb  train_model.ipynb
workshop_gradiant/clasificador_ataques/test_model/: test_df_solution.csv  test_model.ipynb
workshop_gradiant/clasificador_ataques/trained_model/: detected_encoder.joblib
workshop_gradiant/ejercicio/: attack_client.py  attack_server.py  client.py  client_function.py  server.py  server_function.py
workshop_gradiant/predict_attacks/: train_model.ipynb
workshop_gradiant/predict_attacks/dataset/: attacks.csv  generate_data.py
workshop_gradiant/predict_attacks/test_model/: test_df.csv  test_model.ipynb
workshop_gradiant/predict_attacks/trained_model/: knn_model.joblib  protocol_encoder.joblib  scaler.joblib  severity_encoder.joblib
workshop_gradiant/sql_injection/: customers.db  dashboard.html  failed.html  login.html  search.html  server.py  users.db
