[tool.poetry]
name = "workshop-gradiant"
version = "0.1.0"
description = ""
authors = ["riggiogradiant <criggio@gradiant.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
