[tool.poetry]
name = "workshop-gradiant"
version = "0.1.0"
description = ""
authors = ["riggiogradiant <criggio@gradiant.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
cryptography = "^44.0.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
